# ML-Engine

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DOCKERFILE  README.md  create_sample_model.py  pyproject.toml  requirement.txt  requirements-dev.txt  requirements.txt  run_engine.py
.github/workflows/: ci.yml
config/: default_config.yaml
data/: ml-engine-jobs.sqlite3
docs/: BENCHMARKS.md  DEPLOYMENT.md  RUNBOOK.md  SECURITY.md  WHY_BUY.md
plugin/: plugin.py
src/: adapter_loader.py  api_server.py  config_manager.py  dynamic_batcher.py  finetune_engine.py  inference_engine.py  logger.py  metrics_collector.py  model_loader.py  model_registry.py  model_zoo.py  multimodal_loader.py  retrieval_pipeline.py  security.py  state_store.py  storage.py  tenant_store.py  tracing.py  video_pipeline.py  watcher.py
tests/: test_core.py
