[build-system]
requires = ["setuptools>=75.8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-serving-engine"
version = "0.5.0"
description = "Secure, observable multi-format ML model serving"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = {text = "MIT"}
authors = [{name = "ML Serving Engine Contributors"}]
dynamic = ["dependencies"]

[tool.setuptools]
packages = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["venv", ".venv"]

[tool.ruff.lint]
select = ["F"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true
exclude = ["venv", ".venv"]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
fail_under = 25
show_missing = true
